--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,7 @@ sqlalchemy==2.0.23
 alembic==1.13.0
 uvicorn==0.24.0
 psycopg2==2.9.9
+transformers==4.36.2
+torch==2.1.2
+fire==0.5.0
+fairscale==0.4.13
